# project-tracker

./: .flake8  .gitignore  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 86357d97baf8_add_cascade_delete_to_comments.py  96ea67854306_initial_migration.py  d11a043d369c_add_is_admin_to_user.py
app/: __init__.py  main.py
app/api/: auth.py  comments.py  projects.py  tasks.py  users.py
app/core/: __init__.py  config.py  security.py
app/crud/: __init__.py  comment.py  project.py  task.py  user.py
app/db/: __init__.py  models.py  session.py
app/schemas/: __init__.py  comment.py  project.py  task.py  user.py
app/utils/: __init__.py  dependencies.py
